--- a/index.html
+++ b/index.html
@@ -25,11 +25,12 @@
         <section>
             <h2>Productos Destacados</h2>
             <!-- Aquí irán los productos -->
+			<div></div>
         </section>
     </main>
 
     <!-- Botón flotante de WhatsApp -->
-    <a href="https://wa.me/1234567890" target="_blank" class="whatsapp-float">
+    <a href="https://wa.me/+5359449321" target="_blank" class="whatsapp-float">
         <img src="whatsapp.png" alt="WhatsApp">
     </a>
 
