--- a/index.html
+++ b/index.html
@@ -4,36 +4,52 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cuba Tech Motors</title>
-    <link rel="stylesheet" href="styles.css"> <!-- Asegúrate de que la ruta sea correcta -->
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
 
-    <!-- Encabezado -->
     <header>
         <h1>Cuba Tech Motors</h1>
         <p class="subtitulo">Tienda Online</p>
     </header>
 
-    <!-- Menú de navegación -->
     <nav>
         <button id="btnCategorias">Categorías ▶</button>
         <button id="btnOfertas">Ofertas ▶</button>
     </nav>
 
-    <!-- Contenido principal -->
     <main>
-        <section>
+        <section id="slider">
+            <img src="moto1.jpg" class="slide active">
+            <img src="moto2.jpg" class="slide">
+            <img src="moto3.jpg" class="slide">
+        </section>
+
+        <section id="productos">
             <h2>Productos Destacados</h2>
-            <!-- Aquí irán los productos -->
-			<div></div>
+            <div id="productos-container"></div>
         </section>
     </main>
+
+    <!-- Modal para detalles del producto -->
+    <div id="modal" class="modal">
+        <div class="modal-content">
+            <span class="close">&times;</span>
+            <img id="modal-img" src="" alt="">
+            <h3 id="modal-title"></h3>
+            <p id="modal-desc"></p>
+            <p id="modal-price"></p>
+            <a id="modal-whatsapp" href="" target="_blank">
+                <button class="btn-comprar">Consultar por WhatsApp</button>
+            </a>
+        </div>
+    </div>
 
     <!-- Botón flotante de WhatsApp -->
     <a href="https://wa.me/+5359449321" target="_blank" class="whatsapp-float">
         <img src="whatsapp.png" alt="WhatsApp">
     </a>
 
-    <script src="script.js"></script> <!-- Archivo JS externo -->
+    <script src="script.js"></script>
 </body>
 </html>
