--- a/index.html
+++ b/index.html
@@ -14,41 +14,17 @@
     </header>
 
     <nav>
+        <a href="productos.html" class="btn-navegacion">Productos</a>
         <button id="btnCategorias">Categorías ▶</button>
         <button id="btnOfertas">Ofertas ▶</button>
     </nav>
 
     <main>
-        <section id="slider">
-            <img src="moto1.jpg" class="slide active">
-            <img src="moto2.jpg" class="slide">
-            <img src="moto3.jpg" class="slide">
-        </section>
-
-        <section id="productos">
+        <section id="productos-destacados">
             <h2>Productos Destacados</h2>
             <div id="productos-container"></div>
         </section>
     </main>
-
-    <!-- Modal para detalles del producto -->
-    <div id="modal" class="modal">
-        <div class="modal-content">
-            <span class="close">&times;</span>
-            <img id="modal-img" src="" alt="">
-            <h3 id="modal-title"></h3>
-            <p id="modal-desc"></p>
-            <p id="modal-price"></p>
-            <a id="modal-whatsapp" href="" target="_blank">
-                <button class="btn-comprar">Consultar por WhatsApp</button>
-            </a>
-        </div>
-    </div>
-
-    <!-- Botón flotante de WhatsApp -->
-    <a href="https://wa.me/+5359449321" target="_blank" class="whatsapp-float">
-        <img src="whatsapp.png" alt="WhatsApp">
-    </a>
 
     <script src="script.js"></script>
 </body>
