--- a/index.html
+++ b/index.html
@@ -26,6 +26,10 @@
         </section>
     </main>
 
+    <a href="https://wa.me/1234567890" target="_blank" class="whatsapp-float">
+        <img src="whatsapp.png" alt="WhatsApp">
+    </a>
+
     <script src="script.js"></script>
 </body>
 </html>
