--- a/productos.html
+++ b/productos.html
@@ -13,6 +13,13 @@
         <a href="index.html" class="btn-navegacion">Volver al Inicio</a>
     </header>
 
+    <button id="btnCategorias">Categorías ▼</button>
+    <div id="categoriasMenu" class="categorias-oculto">
+        <a href="#">Motorinas</a>
+        <a href="#">Motores</a>
+        <a href="#">Triciclos</a>
+    </div>
+
     <main>
         <section id="productos-lista">
             <h2>Lista de Productos</h2>
@@ -21,5 +28,6 @@
     </main>
 
     <script src="productos.js"></script>
+    <script src="categorias.js"></script>
 </body>
 </html>
