--- a/index.html
+++ b/index.html
@@ -15,14 +15,27 @@
 
     <nav>
         <a href="productos.html" class="btn-navegacion">Productos</a>
-        <button id="btnCategorias">Categorías ▶</button>
-        <button id="btnOfertas">Ofertas ▶</button>
     </nav>
 
     <main>
         <section id="productos-destacados">
-            <h2>Productos Destacados</h2>
-            <div id="productos-container"></div>
+            <h2 class="titulo-centrado">Productos Destacados</h2>
+            <div class="productos-container">
+                <div class="producto">
+                    <img src="img/moto1.jpg" alt="Moto Eléctrica Modelo X">
+                    <h3>Moto Eléctrica Modelo X</h3>
+                    <p>Autonomía: 80km - Velocidad: 60km/h</p>
+                    <span class="precio">$0.55</span>
+                    <button class="btn-comprar">Consultar</button>
+                </div>
+                <div class="producto">
+                    <img src="img/bici1.jpg" alt="Bicicleta Eléctrica Modelo Y">
+                    <h3>Bicicleta Eléctrica Modelo Y</h3>
+                    <p>Autonomía: 50km - Velocidad: 30km/h</p>
+                    <span class="precio">$0.55</span>
+                    <button class="btn-comprar">Consultar</button>
+                </div>
+            </div>
         </section>
     </main>
 
