--- a/index.html
+++ b/index.html
@@ -23,16 +23,16 @@
             <div class="productos-container">
                 <div class="producto">
                     <img src="moto1.jpg" alt="Moto Eléctrica Modelo P">
-                    <h3>Moto Eléctrica Modelo W</h3>
-                    <p>Autonomía: 80km - Velocidad: 60km/h</p>
-                    <span class="precio">$0.55</span>
+                    <h6>MotoTec 60v 1500w</h6>
+                    <p>Autonomía: 250KM - Velocidad: 150km/h</p>
+                    <span class="precio">$1899.99</span>
                     <button class="btn-comprar">Consultar</button>
                 </div>
                 <div class="producto">
                     <img src="bici1.jpg" alt="Bicicleta Eléctrica Modelo P">
-                    <h3>Bicicleta Eléctrica Modelo W</h3>
-                    <p>Autonomía: 50km - Velocidad: 30km/h</p>
-                    <span class="precio">$0.55</span>
+                    <h5>Bicicleta Eléctrica Plegable W</h5>
+                    <p>Autonomía: 100KM - Velocidad: 40km/h</p>
+                    <span class="precio">$599.99</span>
                     <button class="btn-comprar">Consultar</button>
                 </div>
             </div>
