--- a/index.html
+++ b/index.html
@@ -26,14 +26,14 @@
                     <h6>MotoTec 60v 1500w</h6>
                     <p>Autonomía: 250KM - Velocidad: 150km/h</p>
                     <span class="precio">$1899.99</span>
-                    <button class="btn-comprar">Consultar</button>
+                    <button class="btn-comprar">Ver</button>
                 </div>
                 <div class="producto">
                     <img src="bici1.jpg" alt="Bicicleta Eléctrica Modelo P">
-                    <h5>Bicicleta Eléctrica Plegable W</h5>
-                    <p>Autonomía: 100KM - Velocidad: 40km/h</p>
+                    <h6>Bicicleta Eléctrica</h6>
+                    <h6>Autonomía: 100KM - Velocidad: 40km/h</h6>
                     <span class="precio">$599.99</span>
-                    <button class="btn-comprar">Consultar</button>
+                    <button class="btn-comprar">Ver</button>
                 </div>
             </div>
         </section>
