--- a/productos.html
+++ b/productos.html
@@ -3,17 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Productos - Cuba Tech Motors</title>
+    <title>ProductosCTM</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
 
     <header>
         <h1>Productos</h1>
+		<p class="subtitulo">CubaTechM</p>
         <a href="index.html" class="btn-navegacion">Volver al Inicio</a>
     </header>
 
-    <button id="btnCategorias">Categorías ▼</button>
+    <button id="btnCategorias">Categorías</button>
     <div id="categoriasMenu" class="categorias-oculto">
         <a href="#">Motorinas</a>
         <a href="#">Motores</a>
