--- a/productos.html
+++ b/productos.html
@@ -22,8 +22,8 @@
     </div>
 
     <main>
-        <section id="productos-lista">
-            <h2>Lista de Productos</h2>
+        <section >
+            <h2 id="productos-lista">Lista de Productos</h2>
             <div id="productos-adicionales"></div>
         </section>
     </main>
