--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     </header>
 
     <nav>
-        <a href="productos.html" class="btn-navegacion">Ver Todos los Productos</a>
+        <a id="boton-nav"href="productos.html" class="btn-navegacion">Ver Todos los Productos</a>
     </nav>
 
     <main>
