--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
         <p class="subtitulo">Tienda Online</p>
     </header>
 
-    <nav>
-        <a id="boton-nav"href="productos.html" class="btn-navegacion">Ver Todos los Productos</a>
+    <nav id="boton-nav">
+        <a  href="productos.html" class="btn-navegacion">Ver Todos los Productos</a>
     </nav>
 
     <main>
